# libchatter-rs

./: .gitignore  CITATION.cff  Cargo.toml  Makefile  README.md  TODO.md  aws_ip  baseline_results.txt  cli_ip_file  ip_file  logs.txt  perf.data.old  ping.csv
comm/: Cargo.toml
comm/src/: codec.rs  error.rs  lib.rs  traits.rs
comm/src/plaintcp/: config.rs  conn.rs  context.rs  mod.rs  msg.rs  peer.rs  receiver.rs  reliable_sender.rs  sender.rs  tcp.rs  test.rs
comm/src/tls/: mod.rs
config/: Cargo.toml
config/src/: client.rs  error.rs  lib.rs  node.rs
consensus/: Cargo.toml
consensus/apollo/: Cargo.toml
consensus/apollo/src/: lib.rs
consensus/apollo/src/client/: context.rs  mod.rs  start.rs
consensus/apollo/src/node/: blame.rs  commit.rs  comms.rs  context.rs  message.rs  mod.rs  proposal.rs  reactor.rs  request.rs
consensus/apollo/src/normal_client/: start.rs
consensus/artemis/: Cargo.toml
consensus/artemis/src/: lib.rs
consensus/artemis/src/client/: context.rs  mod.rs  start.rs
consensus/artemis/src/node/: blame.rs  commit.rs  comms.rs  context.rs  coordinator.rs  message.rs  mod.rs  reactor.rs  request.rs  round_vote.rs
consensus/dummy/: Cargo.toml  mod.rs
consensus/dummy/src/: reactor.rs
consensus/libp2p-experiment/client/: client.rs  error.rs  handler.rs  protocol.rs  protocolconfig.rs
consensus/libp2p-experiment/replica/: events.rs  mod.rs  reactor.rs_  start.rs
consensus/libp2p-experiment/replica/client/: error.rs  mod.rs
consensus/optsync/: Cargo.toml
consensus/optsync/src/: lib.rs
consensus/optsync/src/client/: start.rs
consensus/optsync/src/node/: blame.rs  commit.rs  context.rs  mod.rs  process.rs  proposal.rs  reactor.rs  vote.rs
consensus/src/: lib.rs
consensus/src/apollo/: mod.rs
consensus/src/apollo/chatter_channel/: mod.rs
consensus/src/apollo/client/: start.rs
consensus/src/apollo/node/: blame.rs  commit.rs  context.rs  message.rs  mod.rs  proposal.rs  reactor.rs  request.rs
consensus/src/apollo/normal_client/: start.rs
consensus/src/dummy/: reactor.rs
consensus/src/libp2p-experiment/client/: behaviour.rs  client.rs  event.rs  mod.rs
consensus/src/libp2p-experiment/replica/: start.rs
consensus/src/libp2p-experiment/replica/client/: behaviour.rs  handler.rs  protocol.rs
consensus/src/optsync/client/: start.rs
consensus/src/optsync/node/: blame.rs  context.rs
consensus/src/stream-sink/: mod.rs
consensus/src/stream-sink/stream/: mod.rs
consensus/src/synchs/: mod.rs
consensus/src/synchs/client/: mod.rs  start.rs
consensus/src/synchs/node/: blame.rs  commit.rs  context.rs  extra.rs  mod.rs  proposal.rs  reactor.rs  timer.rs  vote.rs
consensus/src/synchs/node/reactor_rr/: context.rs  mod.rs  phase.rs  proposal.rs  reactor_rr.rs  status.rs  vote.rs
consensus/synchs/: Cargo.toml
consensus/synchs/src/: lib.rs
consensus/synchs/src/client/: start.rs
consensus/synchs/src/node/: blame.rs  commit.rs  context.rs  proposal.rs  reactor.rs  vote.rs
consensus/synchs/src/node/reactor_rr/: commit.rs  context.rs  proposal.rs  reactor_rr.rs  status.rs  vote.rs
crypto/: Cargo.toml
crypto/src/: crypto.rs  ed25519.rs  gen.rs  hash.rs  lib.rs  rsa.rs  secp256k1.rs
discovery/: Cargo.toml
discovery/src/: lib.rs
examples/apollo/client/: Cargo.toml
examples/apollo/client/src/: cli.yml  main.rs
examples/apollo/node/: Cargo.toml
examples/apollo/node/src/: cli.yml  colton.rs  main.rs
examples/apollo/normal-client/: Cargo.toml
examples/apollo/normal-client/src/: main.rs
examples/echo-exp/ping/: Cargo.toml
examples/echo-exp/ping/src/: cli.yml  main.rs
examples/sink-exp/sink/: Cargo.toml
examples/sink-exp/sink/src/: cli.yml  main.rs
examples/sink/client/: Cargo.toml
examples/sink/replica/: Cargo.toml
examples/sink/replica/src/: main.rs
examples/synchs/client/: Cargo.toml
examples/synchs/client/src/: cli.yml  main.rs
examples/synchs/node/: Cargo.toml
examples/synchs/node-rr/: Cargo.toml
examples/synchs/node-rr/src/: main.rs
examples/synchs/node/src/: cli.yml  main.rs
net/: Cargo.toml
net/src/: lib.rs  peer.rs  read_all.rs  write_all.rs
net/src/client/: start.rs
net/src/futures_manager/: mod.rs  net.rs  peer.rs  protocol.rs  tls_client.rs
net/src/manager/: client.rs  mod.rs  net.rs  protocol.rs
net/src/replica/: mod.rs  start.rs  synchs.rs
net/src/replica/client/: start.rs
net/src/tokio_manager/: net.rs  peer.rs  protocol.rs  tls_client.rs
scripts/: README.md  Untitled.ipynb  apollo-debug-quick-test.sh  apollo-multi-node-test.sh  apollo-release-quick-test.sh  artemis-debug-quick-test.sh  artemis-multi-node-test.sh  artemis-test.sh  aws-setup.sh  export.sh  normal-test.sh  optsync-test.sh  ping-exp.sh  ping.csv  quick-test.sh  root.sh  rr-synchs-test.sh  synchs-release-quick-test.sh  synchs-test.sh  test-non-deterministic-bug.sh
scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scripts/aws/: README.md  debug.sh  do_clean.sh  do_debug.sh  do_ping-exp.sh  do_setup.sh  do_update.sh  get_pvt_ips.sh  make_ip_files.sh  ping-client.sh  ping-exp.sh  setup.sh  update.sh
scripts/data/: clear.sh
scripts/ping/: parse-ping-exp.py  ping-exp.sh  plot-ping.ipynb
scripts/plot/: ping-plot.ipynb  t2med-processed.json  vary-d.ipynb  varyb-plot.ipynb  (+1 more)
stress-test/: Cargo.toml
tools/genconfig/: Cargo.toml
tools/genconfig/src/: cli.yml  main.rs
types/: Cargo.toml
types/src/: lib.rs  protocol.rs  traits.rs
types/src/msg/: block.rs  cert.rs  generic.rs  mod.rs  payload.rs  propose.rs  proto.rs  storage.rs  tx.rs  vote.rs
types/src/msg/apollo/: client.rs  mod.rs  propose.rs  proto.rs
types/src/msg/artemis/: block.rs  client.rs  mod.rs  propose.rs  proto.rs  ucr.rs
types/src/msg/dummy/: mod.rs
types/src/msg/optsync/: mod.rs  propose.rs  proto.rs
types/src/msg/sinkexp/: mod.rs
types/src/msg/synchs/: mod.rs  propose.rs  proto.rs
types/src/msg/synchs_rr/: mod.rs
util/: Cargo.toml
util/src/: codec.rs  io.rs  lib.rs
util/src/channel/: mod.rs
util/src/codec/: block.rs  fblock.rs  ftx.rs  mod.rs  proto.rs  synchs.rs  tx.rs
(+327 files in other folders)
