[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
    "types",
    "config",
    "crypto",
    "tools/genconfig",
    "consensus",
    "net",
    "util",
    "examples/sink-exp/relay",
    "examples/sink-exp/sink",
    "examples/sink-exp/stream",
    "examples/apollo/node",
    "examples/synchs/node-rr",
    "examples/synchs/node",
    "examples/optsync/node",
    "examples/apollo/client",
    "examples/synchs/client",
    "examples/optsync/client",
    "examples/echo-exp/echo",
    "examples/echo-exp/ping",
    "examples/apollo/normal-client",
    "consensus/apollo",
    "consensus/dummy",
    "consensus/optsync",
    "consensus/synchs",
]