[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
    "types",
    "config",
    "crypto",
    "tools/genconfig",
    "consensus",
    "net",
    "discovery",
    "util",
    # "comm", (WIP: Do not enable unless testing)
    # Sink Experiment modules
    "examples/sink-exp/relay",
    "examples/sink-exp/sink",
    "examples/sink-exp/stream",
    # Ping modules
    "examples/echo-exp/echo",
    "examples/echo-exp/ping",
    # Apollo modules
    "consensus/apollo",
    "examples/apollo/node",
    "examples/apollo/client",
    "examples/apollo/normal-client",
    # Sync HotStuff modules
    "consensus/synchs",
    "examples/synchs/node-rr",
    "examples/synchs/node",
    "examples/synchs/client",
    # Opt Sync modules
    "consensus/optsync",
    "examples/optsync/node",
    "examples/optsync/client",
    # Artemis modules
    "consensus/artemis",
    "examples/artemis/node",
    "examples/artemis/client",
    # Dummy consensus module
    "consensus/dummy",
]