[package]
name = "comm"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
fnv = "1"
bincode = "1"
util = {path = "../util"}
async-trait = "0.1"
simple_logger = "1"
tracing = "0.1"

[dependencies.tokio]
features = ["net"]

