[package]
name = "comm"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
fnv = "1"
bincode = "1"
util = {path = "../util"}
async-trait = "0.1"
simple_logger = "2"
log = "0"
tracing = "0.1"
derive_builder = "0"
bytes = "1"
tokio-stream = "0"
futures = "0"
rand = { version = "0.7", features = ["small_rng"] }

[dependencies.tokio-util]
version = "0"
featuers = ["codec"]

[dependencies.tokio]
features = ["net"]
version = "1"

