[package]
name = "config"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
types = { package = "types", path="../types"}
crypto = { package = "crypto", path="../crypto"}
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
bincode = "1"
log="*"
fnv = "1"