[package]
name = "consensus"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../config"}
types = { package = "types", path="../types"}
crypto = { package = "crypto", path="../crypto"}
util = { package = "util", path="../util"}
tokio = { version = "0.3.5", features = ["full"] }
futures_codec = "0.4.1"
futures = "^0.3"
bytes = "0.6"

[dependencies.libp2p]
version = "0.31.2"
default-features = true
features = [
    "tcp-tokio",
    "noise",
    "mplex",
    "ping",
    "pnet",
    "secp256k1",
    "yamux",
    "deflate",
    "dns",
    "floodsub",
    "identify",
    "kad",
    "gossipsub",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "request-response",
    "secp256k1",
    "uds",
    "wasm-ext",
    "websocket",
]