[package]
name = "consensus"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../config"}
types = { package = "types", path="../types"}
crypto = { package = "crypto", path="../crypto"}
util = { package = "util", path="../util"}
tokio = { version = "1.0", features = ["full"] }
# crossfire = "0.1"
futures = "^0.3"
bytes = "1.0"
tokio-util = "0.6"
tokio-stream = "0.1"

[dependencies.libp2p]
version = "0.30.1"
# default-features = true
features = [
    # "tcp-tokio",
    # "noise",
    # "mplex",
    "secp256k1",
]