[package]
name = "consensus"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../config"}
types = { package = "types", path="../types"}
crypto = { package = "crypto", path="../crypto"}
net = { package = "net", path="../net"}
util = { package = "util", path="../util"}
tokio = { version = "1", features = ["full"] }
futures = "0"
bytes = "1"
tokio-util = "0"
tokio-stream = "0"
serde = "1"
log="*"
priority-queue="1"
fnv = "1"