[package]
name = "crypto"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# types = { package = "types", path="../types"}
sha2 = "0.9.2"
serde = "1.0.118"
flexbuffers = "0.2.1"
# util = {package = "util", path = "../util"}