[package]
name = "crypto"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# types = { package = "types", path="../types"}
sha2 = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
libsecp256k1 = { version = "0.3" }
asn1_der = "0.6"
# serde_asn1_der = "0.6"
rand = "*"
lazy_static = "1"
zeroize = "1"
ring = { version = "0.16", features = ["alloc", "std"], default-features = false }

[dependencies.ed25519-dalek]
version = "1"
features = ["serde"]
# util = {package = "util", path = "../util"}

[dev-dependencies]
quickcheck = "1"