[package]
name = "net"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {package = "types", path = "../types"}
util = {package = "util", path = "../util"}
config = {package = "config", path = "../config"}
tokio = { version = "0.3.5", features = ["full"] }
tokio-util = {version = "0.5.1", feature = "codec"}
tokio-codec = "0.1.2"
futures = "^0.3"

[dependencies.libp2p]
version = "0.31.2"
default-features = true
features = [
    "tcp-tokio",
    "noise",
    "mplex",
    "ping",
    "pnet",
    "secp256k1",
    "yamux",
]