[package]
name = "net"
version = "0.2.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {package = "types", path = "../types"}
util = {package = "util", path = "../util"}
config = {package = "config", path = "../config"}
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.6", features = ["codec"]}
futures = "^0.3"
futures-lite = "1.0"
tokio-stream = "0.1"
# crossfire = "0.1"
async-stream = "0.3"
futures-util = "0.3"
log="*"
tokio-rustls = "0.22"
openssl = "0.10"
fnv = "1"