[package]
name = "types"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
crypto = {package = "crypto", path = "../crypto"}
linked-hash-map = "0.5"
tokio-util = {version = "0.6", features= ["codec"]}
bytes = "1.0"
log = "0.4"