[package]
name = "util"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
flexbuffers = "0.2.1"
futures_codec = "0.4.1"
tokio-util = {version = "0.5.1", features = ["full"]}
bytes = "0.6.0"
types = {package = "types", path = "../types"}