[package]
name = "client-apollo"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../../../config"}
consensus = { package = "consensus", path="../../../consensus"}
apollo = { package = "apollo", path="../../../consensus/apollo"}
net = { package = "net", path="../../../net"}
util = { package = "util", path="../../../util"}
types = { package = "types", path="../../../types"}
clap = {version = "~2.27.0", features = ["yaml"]}
tokio = { version = "1.0", features = ["full"] }
log="*"
simple_logger="*"