[package]
name = "normal-client-apollo"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
clap = "2"
simple_logger = "1"
config = { package = "config", path="../../../config"}
log="0.4"
util = { package = "util", path="../../../util"}
consensus = { package = "consensus", path="../../../consensus"}