[package]
name = "sinker"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../../../config"}
consensus = { package = "consensus", path="../../../consensus"}
net = { package = "net", path="../../../net"}
types = { package = "types", path="../../../types"}
clap = {version = "~2.27.0", features = ["yaml"]}
tokio = { version = "0.3", features = ["full"] }
futures = "^0.3"
util = { package = "util", path="../../../util"}
tokio-util = {version = "0.5.1", features = ["full"]}
libp2p = { version = "0.30.1", features = ["identify", "secp256k1"]}
