[package]
name = "node-synchs"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../../../config"}
consensus = { package = "consensus", path="../../../consensus"}
util = { package = "util", path="../../../util"}
types = { package = "types", path="../../../types"}
net = { package = "net", path="../../../net"}
clap = {version = "~2.27.0", features = ["yaml"]}
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.8"

[dependencies.libp2p]
version = "0.30.1"
features = [
    "identify",
    "secp256k1"
]